caproto/v1.0.0/_sources/generated/caproto.server.records.RecordFieldGroup.rst.txt
caproto.server.records.RecordFieldGroup
=======================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: RecordFieldGroup

.. autoclass:: RecordFieldGroup

    .. if not using autodoc, add this here: automethod:: __init__

    

    

    
    
    .. list-table:: RecordFieldGroup pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - PvpropertyChar 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - PvpropertyChar 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
                 **Get**
                 **Put**
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - PvpropertyChar 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - PvpropertyEnumRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
                 **Put**
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - PvpropertyCharRO 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - PvpropertyStringRO 
           - 
                 **Read-only**
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess
           - PvpropertyByteRO 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
                 **Put**
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - PvpropertyShort 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - PvpropertyString 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - PvpropertyByte 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - PvpropertyEnum 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~RecordFieldGroup.group_read
       ~RecordFieldGroup.group_write
       ~RecordFieldGroup.publish
       ~RecordFieldGroup.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~RecordFieldGroup.default_values
       ~RecordFieldGroup.has_val_field
       ~RecordFieldGroup.scan_rate_sec
       ~RecordFieldGroup.type_map
       ~RecordFieldGroup.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: description.getter(self, instance)
        

    
    .. literalinclude:: /../../../../caproto/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 41
        :lines: 41-43